fixed nav bar alignment, removed useless styling

--- a/pages/info/info.css
+++ b/pages/info/info.css
@@ -107,11 +107,11 @@ a:hover {
 /*header styling*/
 
 #header {
+    text-align: center;
     display: flex;
-    flex: auto;
-    flex-wrap: wrap;
+    flex: 1;
+    flex-wrap: nowrap;
     align-items: center;
-    justify-content: stretch;
     margin-top: 0.5em;
     /*background-color: yellow;*/
     padding: 0.5em;
@@ -123,10 +123,9 @@ a:hover {
 #title {
     display: flex;
     flex: auto;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     /*background-color: antiquewhite;*/
 }
 
@@ -134,7 +133,7 @@ a:hover {
     margin: 0.1em 0.5em;
     padding: 0.5em;
     /*background-color: brown;*/
-    justify-content: flex-start;
+
 }
 
 .motif img {
@@ -151,31 +150,23 @@ a:hover {
     font-family: 'Rowdies', 'Arial', sans-serif;
     border-radius: 5px;
     font-size: 14px;
-    display: flex;
-    flex-direction: auto;
-    align-items: stretch;
-    justify-content: center;
-    background-color: #4e697a;
     color: antiquewhite;
 }
 
 #nav ul {
-    margin: 0em;
+    margin: 0.5em;
     padding: 0em;
     display: flex;
-    /*background-color: black;*/
+    background-color:#4e697a;
+    border-radius: 5px;
     flex-wrap: wrap;
-    flex: auto;
-    justify-content: baseline;
-    align-items: stretch;
+    flex: 1;
 }
 
 #nav ul li {
     margin: 1em;
     padding: 0.5em 1em;
     border-radius: 5px;
-    justify-content: center;
-   
     /*background-color: yellowgreen;*/
 
 }
